fix table header z-index

--- a/src/assets/stylesheets/components/table.scss
+++ b/src/assets/stylesheets/components/table.scss
@@ -36,6 +36,7 @@ table {
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2);
   position: sticky;
   top: -2px;
+  z-index: 2
 }
 
 .table--fixed-header th {
